# wizard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  SPEC.md  SPEC_v8.md  alembic.ini  apm.yml  config.example.json  docker-compose.yml  package.json  pyproject.toml  pyrightconfig.json  server.py  tsconfig.json  tsconfig.test.json  vitest.config.ts  wizard.config.example.yaml
.claude/agents/: wizard-review.md
.github/workflows/: release.yml
.opencode/plans/: 2026-04-16-fastmcp-dependency-injection-refactor.md  2026-04-16-unified-update-task-tool-design.md  2026-04-16-unified-update-task-tool.md
.serena/: project.yml
alembic/: env.py
alembic/versions/: 15146de1d71a_add_toolcall_table.py  1bbc6e61da58_initial.py  3fc6e6059028_add_session_lifecycle_columns.py  75c94727cfc5_note_artifact_ref_check.py  95ee99a3db06_backfill_artifact_ids.py  a1b2c3d4e5f6_add_active_mode_to_wizardsession.py  a2b3c4d5e6f7_add_fts5_search_tables.py  a9b8c7d6e5f4_add_transcript_raw_to_wizardsession.py  abaf4086789e_initial.py  adf0790585cc_add_transcript_path_and_agent_to_.py  af6f28588a06_strip_external_ids.py  bdb1a20e53d2_add_daily_page_id_to_wizardsession.py  c821b5437485_add_task_state_mental_model_session_.py  d4e9f1a2b3c7_add_is_synthesised_to_wizardsession.py  f0fb7ac74c46_artifact_identity.py  f1a2b3c4d5e6_add_rolling_summary_to_task_state.py  f9c1f7acf832_initial.py
core/: config.ts
core/output/: embeddings.ts  pipeline.ts  process.ts  store.ts  transform.ts  types.ts  validate.ts
core/workflows/: task-start.ts
data/: db.ts
data/repositories/: audit.ts  config.ts  embeddings.ts  health.ts  meeting.ts  session.ts  task.ts  workflow-run.ts
docs/: spec-190-synthesis-hardening.md
docs/ai/: architecture.md  cli.md  config.md  database.md  middleware.md  models.md  registration.md  repositories.md  security.md  services.md  sessions.md  skills.md  synthesis.md  tasks.md  tools.md
docs/dev/: agent-registration.md  architecture.md  configuration.md  database.md  dependency-injection.md  doctor-checks.md  elicitation.md  middleware.md  pii-scrubbing.md  sentry.md  session-continuity.md  session-personalization.md  skills-system.md  synthesis.md  tools-reference.md  verify.md
docs/usr/: commands.md  configuration.md  getting-started.md  pii-scrubbing.md  sessions.md  synthesis.md  tasks.md  troubleshooting.md
docs/wizard/: ERDiagram.md
hooks/: session-end.sh  session-start-minimal.sh  session-start.sh
integrations/notion/: index.ts  pull.ts
interfaces/cli/: index.ts
interfaces/mcp/: index.ts
llm/: types.ts
llm/adapters/: base.ts  (+1 more)
prisma/: schema.prisma
scripts/: backfill_synthesis.py  bump_version.py  pre-commit
security/: encrypt.ts  scrub.ts  types.ts
services/: inject.ts  integration.ts  preflight.ts  session.ts  task.ts  workflow.ts
shared/: types.ts
src/: config.py  database.py  deps.py  integrations.py  mappers.py  mcp_instance.py  models.py  prompts.py  repositories.py  resources.py  schemas.py  security.py  services.py  tools.py
tests/: conftest.py  fakes.py  fix_tests.py  helpers.py  test_agent_registration.py  test_agent_registration_import.py  test_bump_version.py  test_cli.py  test_cli_analytics.py  test_cli_capture.py  test_cli_update.py  test_config.py  test_database.py  test_doctor.py  test_exceptions.py  test_integrations.py  test_mappers.py  test_mcp_config.py  test_migration_data_layer.py  test_models.py  test_notion_discovery.py  test_ollama_synthesiser.py  test_prompts.py  test_query_tools.py  test_repositories.py  test_resources.py  test_schemas.py  test_security.py  test_services.py  test_session_closer.py  test_session_start.py  test_session_tools_stripped.py  test_skills.py  test_synthesis_integration.py  test_synthesiser.py  test_task_dedup.py  test_tools.py  test_tools_stripped.py  test_transcript.py  test_triage_tools.py
(+291 files in other folders)
