[project]
name = "wizard"
version = "1.1.0"
description = "Local memory layer MCP server — syncs Jira and Notion, scrubs PII, surfaces structured context across sessions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "atlassian-python-api>=4.0.7",
    "fastmcp[tasks]>=3.2.0",
    "httpx>=0.27",
    "notion-client>=3.0",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
