[project]
name = "wizard"
version = "2.0.2"
description = "Local memory layer MCP server — syncs Jira and Notion, scrubs PII, surfaces structured context across sessions"
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastmcp[tasks]>=3.2.0",
    "httpx>=0.27",
    "notion-client>=3.0",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.38",
    "tomli-w>=1.0.0",
    "typer>=0.12.0",
]

[project.scripts]
wizard = "wizard.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wizard"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
